Bug 896294 - Apply overflow scroll to options flyout when in input precise mode. r=tabraldes
UltraBlame original commit: 1cf7aa4b2626aa9228c857f6fd4b5de1bfec2aa7

--- a/browser/metro/theme/flyoutpanel.css
+++ b/browser/metro/theme/flyoutpanel.css
@@ -367,6 +367,23 @@ width
 ;
 }
 .
+flyoutpanel
+-
+contents
+[
+input
+=
+"
+precise
+"
+]
+{
+overflow
+:
+scroll
+;
+}
+.
 flyout
 -
 close
